# PyconGR

./: Dockerfile  README.md  pyproject.toml
src/: client.py  lambda_function.py  mlops_utils.py  serialize-models.py  train.py
